--- a/Relogio/css/style.css
+++ b/Relogio/css/style.css
@@ -4,6 +4,8 @@ body{
     background-repeat: no-repeat;
     height: 100vh;
     display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .clock {
@@ -15,7 +17,7 @@ body{
     gap: 20px;
 }
 
-.relogio {
+.relogioLight {
     margin: 25px;
     width: 350px;
     height: 150px;
@@ -27,7 +29,7 @@ body{
     justify-content: center;
 }
 
-.relogio div {
+.relogioLight div {
     background: rgb(139, 95, 241, 0.7);
     color: rgb(0, 0, 0);
     height: 150px;
@@ -39,7 +41,7 @@ body{
     font-size: 80px;
 }
 
-.relogio .Pontos {
+.relogioLight .Pontos {
     font-size: 80px;
 }
 
@@ -72,13 +74,13 @@ body{
 
 .mensagem {
     background: rgb(216, 219, 238, 0.7);
-    width: 150px;
+    width: auto;
     height: auto;
     font-size: 50px;
     border-radius: 20px;
     display: flex;
-    align-items: flex-end;
-    justify-content: flex-end;
+    align-items: center;
+    justify-content: center;
     border: 10px solid rgb(139, 95, 241, 0.7);
     box-shadow: 5px var(--shadow);
 }
@@ -89,7 +91,7 @@ body{
 }
 
 .tarde {
-    background-image: url('/images/wallpapper\ 8.jpg');
+    background-image: url('/images/wallpapper\ 7.jpg');
     cursor: url('/images/if-weather-3-2682848_90785.png'), default;
 }
 
@@ -98,14 +100,26 @@ body{
     cursor: url('/images/iconfinder-weather-weather-forecast-moon-night-sky-3859141_121229.png'), default;
 }
 
-.nightTheme{
-    border: 10px solid rgba(211, 6, 6, 0.7);
+.relogioNight .relogioLight{
+    background: rgba(0, 0, 0, 0.7); 
+}
+.relogioNight .relogioLight div{
+    background: rgba(182, 12, 12, 0.7);
     color: rgb(255, 255, 255);
 }
 
-.nightTheme{
-    border: 10px solid rgb(139, 95, 241, 0.7);
-    color: rgb(0, 0, 0);
+.relogioNight .data{
+    background: rgba(0, 0, 0, 0.7);
+}
+
+.relogioNight .data div{
+    background: rgb(182, 12, 12, 0.7);
+    color: rgb(255, 255, 255);
+}
+
+.relogioNight .mensagem{
+    background: rgba(0, 0, 0, 0.7);
+    border: 10px solid rgb(182, 12, 12, 0.7);
 }
 
 button{
