--- a/media escolar/css/style.css
+++ b/media escolar/css/style.css
@@ -1,65 +1,73 @@
-body{
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    background-image: url('/image/livros.jpeg');
-    height: 100vh;
+body {
+    font-family: 'Lucida Sans', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    background-image: url('/img/livros.jpeg');
     background-repeat: no-repeat;
     background-size: cover;
-    cursor: pointer;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: right;
+}
+
+.elementos {
+    width: 300px;
+    background: white;
+    padding: 10px;
+    border-radius: 40px;
+    display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
-    text-align: right;
-    flex-direction: column;
-    display: flex;
+    gap: 5px;
 }
 
-.elementos{
-    align-items: right;
-    justify-content: right;
-    text-align: right;
-    width: auto;
-    height: 350px;
-}
-
-label{
-    font-style:oblique;
+label {
+    font-style: italic;
     font-size: 20px;
-    margin-left: 25px;
-    text-align: center;
-    color: white;
+    color: rgb(243, 63, 9);
+    margin: 0;
 }
 
-#text1{
-   font-style: italic;
-   font-size: 45px;
-   color: #f33f09;
-}
-
-#text2{
-    font-size: 40px;
-    font-style: bold;
-    color: #f33f09;
-}
-
-button{
+button, input {
     border: solid 5px rgb(243, 63, 9);
     border-radius: 25px;
-    color: rgb(243, 63, 9);
-    background-color: white;
-    transition: 0.5s;
     font-size: 16px;
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-style: bold;
     cursor: pointer;
+    padding: 10px 20px;
 }
 
-button :hover{
+button {
+    margin: 10px;
+    color: rgb(243, 63, 9);
+    background-color: white;
+    transition: background-color 0.5s, color 0.5s;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+button:hover {
     background-color: rgb(226, 66, 18);
     color: white;
 }
 
-input{
-    border: solid 5px rgb(243, 63, 9);
-    border-radius: 25px;
+input {
     font-size: 15px;
+    color: #f33f09;
 }
 
+span{
+    font-size: 25px;
+    font-style: bold;
+    color: #f33f09;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border-radius: 20px;
+    margin: 5px;
+    padding: 10px;
+    background-color: white;
+}
